--- a/Django_Docker/requirements.txt
+++ b/Django_Docker/requirements.txt
@@ -10,6 +10,7 @@ opencv-contrib-python
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
+oauth2client
 ultralytics
 numpy
 pandas
