--- a/Django_Docker/compose.yaml
+++ b/Django_Docker/compose.yaml
@@ -2,20 +2,24 @@ services:
   db:
     image: postgres:14.2
     environment:
-      POSTGRES_DB: toolkeeper_db
-      POSTGRES_USER: team8
-      POSTGRES_PASSWORD: toolkeeper
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - db-data:/var/lib/postgresql/data
   web:
     build: .
     environment:
-      DJANGO_SETTINGS_MODULE: toolkeeper.settings
-      DB_NAME: toolkeeper_db
-      DB_USER: team8
-      DB_PASSWORD: toolkeeper
-      DB_HOST: db
-      DB_PORT: 5432
+      DJANGO_SETTINGS_MODULE: toolkeeper.settings_dev
+      SECRET_KEY: django-insecure-mh0=-w7^c3y5+mm86zb%gsbodtvldp1_(g-gr8f@8-1qs1y_ju
+      ALLOWED_HOSTS: ${ALLOWED_HOSTS}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      SERVICE_ACCOUNT_KEY_NAME: ${SERVICE_ACCOUNT_KEY_NAME}
+      GOOGLE_DRIVE_FOLDER_ID: ${GOOGLE_DRIVE_FOLDER_ID}
     depends_on:
       - db
     ports:
