--- a/Django_Docker/compose.yaml
+++ b/Django_Docker/compose.yaml
@@ -10,8 +10,9 @@ services:
   web:
     image: fki2266287/tool-keeper-web:latest
     environment:
+      DJANGO_SETTINGS_MODULE: toolkeeper.settings_dev
       SECRET_KEY: django-insecure-mh0=-w7^c3y5+mm86zb%gsbodtvldp1_(g-gr8f@8-1qs1y_ju
-      ALLOWED_HOSTS: ${ALLOWED_HOSTS}
+      # ALLOWED_HOSTS: ${ALLOWED_HOSTS}
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
