--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /prototype
 /tmp
+/Django/item_tracker/media
+/Django_Docker/.env
+/Django_Docker/*.json
+/Django_Docker/*.bat
+/Django_Docker/*.zip
+/lib
+ 
