--- a/Django_Docker/.env
+++ b/Django_Docker/.env
@@ -2,9 +2,9 @@ COMPOSE_PROJECT_NAME=tool-keeper
 
 ALLOWED_HOSTS=fukuiohr.net
 
-DB_NAME=team8
-DB_USER=postgres
-DB_PASSWORD=team8
+DB_NAME=toolkeeper_db
+DB_USER=team8
+DB_PASSWORD=toolkeeper
 DB_HOST=db
 
 SERVICE_ACCOUNT_KEY_NAME=tool-keeper-1a130098d074.json
