--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /Django_Docker/*.zip
 /lib
 /local
+/Django_Docker/toolkeeper/__pycache__
+/Django_Docker/toolkeeper_app/__pycache__
+/Django_Docker/accounts/__pycache__
