--- a/Django_Docker/compose.yaml
+++ b/Django_Docker/compose.yaml
@@ -8,6 +8,7 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
   web:
+    # build: .
     image: fki2266287/tool-keeper-web:latest
     environment:
       DJANGO_SETTINGS_MODULE: toolkeeper.settings_dev
