--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
 /prototype
 /tmp
+
 /Django/item_tracker/media
+
 /Django_Docker/.env
 /Django_Docker/*.json
 /Django_Docker/*.bat
 /Django_Docker/*.zip
+
+/Django_Docker/toolkeeper/__pycache__
+/Django_Docker/toolkeeper_app/__pycache__
+/Django_Docker/toolkeeper_app/migrations/__pycache__
+/Django_Docker/accounts/__pycache__
+/Django_Docker/accounts/migrations/__pycache__
+
 /lib
+/local
