--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /Django_Docker/*.json
 /Django_Docker/*.bat
 /Django_Docker/*.zip
+/Django_Docker/media
 /Django_Docker/runs
 
 /Django_Docker/toolkeeper/__pycache__
