--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
 /prototype
 /tmp
+
 /Django/item_tracker/media
+
 /Django_Docker/.env
 /Django_Docker/*.json
 /Django_Docker/*.bat
 /Django_Docker/*.zip
+/Django_Docker/media
+/Django_Docker/runs
+
+/Django_Docker/toolkeeper/__pycache__
+/Django_Docker/toolkeeper_app/__pycache__
+/Django_Docker/toolkeeper_app/migrations/__pycache__
+/Django_Docker/accounts/__pycache__
+/Django_Docker/accounts/migrations/__pycache__
+
 /lib
 /local
