--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /Django_Docker/*.json
 /Django_Docker/*.bat
 /Django_Docker/*.zip
+/Django_Docker/media
+/Django_Docker/runs
 
 /Django_Docker/toolkeeper/__pycache__
 /Django_Docker/toolkeeper_app/__pycache__
